# vs

./: README.md  esbuild.js  package.json
mouse_listener/: README.md  package.json
mouse_listener/lib/: index.d.ts  index.js
mouse_listener/native/: Cargo.toml
mouse_listener/native/src/: hello.rs  lib.rs  listen_mouse.rs  main.rs  parse_async.rs
src/: extension.ts
src/test/: hello.js
